2006-07-07  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/28187
	* tree-vrp.c (vrp_operand_equal_p): New function.
	(vrp_bitmap_equal_p): Likewise.
	(update_value_range): Use them to compare old and new
	max and min values.

	* gcc.dg/pr28187.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115255 138bc75d-0d04-0410-961f-82ee72b054a4